--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node dist/index.js",
     "dev": "nodemon --watch src/**/*.ts --exec ts-node src/index.ts",
-    "build": "tsc"
+    "build": "tsc && cp -R src/templates dist/templates"
   },
   "keywords": [],
   "author": "Jahangeer",
